--- a/Covid-19 Detection.ipynb
+++ b/Covid-19 Detection.ipynb
@@ -34,23 +34,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'sequential' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-4-25710c0c4fa7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mmodel\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msequential\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mConv2D\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m32\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mkernel_size\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mactivation\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'relu'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0minput_shape\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m224\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m224\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mConv2D\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m128\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mactivation\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'relu'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mMaxPooling2D\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpool_size\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mDropout\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0.25\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'sequential' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "model = sequential()\n",
+    "model = Sequential()\n",
     "model.add(Conv2D(32,kernel_size=(3,3),activation='relu',input_shape=(224,224,3)))\n",
     "model.add(Conv2D(128,(3,3),activation='relu'))\n",
     "model.add(MaxPooling2D(pool_size=(2,2)))\n",
@@ -70,6 +58,204 @@
     "model.add(Dense(1,activation='softmax'))\n",
     "\n",
     "model.compile(loss=keras.losses.binary_crossentropy,optimizer='adam',metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_1\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "conv2d_1 (Conv2D)            (None, 222, 222, 32)      896       \n",
+      "_________________________________________________________________\n",
+      "conv2d_2 (Conv2D)            (None, 220, 220, 128)     36992     \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_1 (MaxPooling2 (None, 110, 110, 128)     0         \n",
+      "_________________________________________________________________\n",
+      "dropout_1 (Dropout)          (None, 110, 110, 128)     0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_3 (Conv2D)            (None, 108, 108, 64)      73792     \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_2 (MaxPooling2 (None, 54, 54, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "dropout_2 (Dropout)          (None, 54, 54, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_4 (Conv2D)            (None, 52, 52, 128)       73856     \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_3 (MaxPooling2 (None, 26, 26, 128)       0         \n",
+      "_________________________________________________________________\n",
+      "dropout_3 (Dropout)          (None, 26, 26, 128)       0         \n",
+      "_________________________________________________________________\n",
+      "flatten_1 (Flatten)          (None, 86528)             0         \n",
+      "_________________________________________________________________\n",
+      "dense_1 (Dense)              (None, 64)                5537856   \n",
+      "_________________________________________________________________\n",
+      "dropout_4 (Dropout)          (None, 64)                0         \n",
+      "_________________________________________________________________\n",
+      "dense_2 (Dense)              (None, 1)                 65        \n",
+      "=================================================================\n",
+      "Total params: 5,723,457\n",
+      "Trainable params: 5,723,457\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data = image.ImageDataGenerator(rescale = 1./255, horizontal_flip = True,)\n",
+    "test_data = image.ImageDataGenerator(rescale=1./255)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 224 images belonging to 2 classes.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'Covid': 0, 'Normal': 1}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_generator = train_data.flow_from_directory('CovidDataset/Train',target_size = (224,224), batch_size = 32, class_mode = 'binary')\n",
+    "train_generator.class_indices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 60 images belonging to 2 classes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "validation_generator = test_data.flow_from_directory('CovidDataset/Val', target_size = (224,224), batch_size = 32, class_mode = 'binary')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hist = model.fit_generator?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "8/8 [==============================] - 84s 10s/step - loss: 7.8463 - accuracy: 0.4883 - val_loss: 5.4762 - val_accuracy: 0.5000\n",
+      "Epoch 2/10\n",
+      "8/8 [==============================] - 85s 11s/step - loss: 7.5468 - accuracy: 0.5078 - val_loss: 8.2142 - val_accuracy: 0.5000\n",
+      "Epoch 3/10\n",
+      "8/8 [==============================] - 93s 12s/step - loss: 7.7864 - accuracy: 0.4922 - val_loss: 6.5714 - val_accuracy: 0.5000\n",
+      "Epoch 4/10\n",
+      "8/8 [==============================] - 93s 12s/step - loss: 7.4869 - accuracy: 0.5117 - val_loss: 9.8571 - val_accuracy: 0.5000\n",
+      "Epoch 5/10\n",
+      "8/8 [==============================] - 101s 13s/step - loss: 7.5468 - accuracy: 0.5078 - val_loss: 5.4762 - val_accuracy: 0.5000\n",
+      "Epoch 6/10\n",
+      "8/8 [==============================] - 101s 13s/step - loss: 7.9661 - accuracy: 0.4805 - val_loss: 8.2142 - val_accuracy: 0.5000\n",
+      "Epoch 7/10\n",
+      "8/8 [==============================] - 112s 14s/step - loss: 7.4869 - accuracy: 0.5117 - val_loss: 7.1190 - val_accuracy: 0.5000\n",
+      "Epoch 8/10\n",
+      "8/8 [==============================] - 101s 13s/step - loss: 7.9062 - accuracy: 0.4844 - val_loss: 6.0238 - val_accuracy: 0.5000\n",
+      "Epoch 9/10\n",
+      "8/8 [==============================] - 99s 12s/step - loss: 7.3671 - accuracy: 0.5195 - val_loss: 8.2142 - val_accuracy: 0.5000\n",
+      "Epoch 10/10\n",
+      "8/8 [==============================] - 100s 12s/step - loss: 7.8463 - accuracy: 0.4883 - val_loss: 6.0238 - val_accuracy: 0.5000\n"
+     ]
+    }
+   ],
+   "source": [
+    "hist = model.fit_generator(train_generator, steps_per_epoch = 8, epochs =10, validation_data=validation_generator) \n",
+    "                          "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'val_loss': [5.476156711578369, 8.214235305786133, 6.571388244628906, 9.857081413269043, 5.476156711578369, 8.214235305786133, 7.119003772735596, 6.023772716522217, 8.214235305786133, 6.023772716522217], 'val_accuracy': [0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5], 'loss': [7.846305787563324, 7.546828627586365, 7.786410331726074, 7.486932873725891, 7.54682856798172, 7.966096818447113, 7.486933052539825, 7.906201183795929, 7.367141962051392, 7.8463059067726135], 'accuracy': [0.48828125, 0.5078125, 0.4921875, 0.51171875, 0.5078125, 0.48046875, 0.51171875, 0.484375, 0.51953125, 0.48828125]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "summary=hist.history\n",
+    "print(summary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'History' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-26-a3ffe6baa463>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mhist\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"val_accuracy\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mlabel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"Validation Accuracy\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mhist\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"accuracy\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mlabel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"Training Accuracy\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlegend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mxlabel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"epochs\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'History' object is not subscriptable"
+     ]
+    }
+   ],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "plt.plot(summary[\"val_accuracy\"],label=\"Validation Accuracy\")\n",
+    "plt.plot(summ[\"accuracy\"],label=\"Training Accuracy\")\n",
+    "plt.legend()\n",
+    "plt.xlabel(\"epochs\")\n",
+    "plt.ylabel(\"Accuracy\")\n",
+    "plt.show()"
    ]
   },
   {
