--- a/Covid-19 Detection.ipynb
+++ b/Covid-19 Detection.ipynb
@@ -126,7 +126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Training da "
+    "# Training data "
    ]
   },
   {
@@ -395,8 +395,15 @@
     }
    ],
    "source": [
-    "sns.heatmap(cn,cmap=\"plasma\",annot=True)"
+    "sns.heatmap(cn,cmap=\"plasma\",annot=True) #0: Covid ; 1: Normal"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
